using System;

namespace ExpensesSplitter.WebApi.Models
{
    public class NewSettlementUser
    {
        public string DisplayName { get; set; }
    }
}
