namespace ExpensesSplitter.WebApi.Models
{
    public class UserBalance
    {
        public SettlementUser User { get; set; }
        public decimal Balance { get; set; }
    }
}